3/06/2020-Created new component for sen vpost

--- a/src/app/generic/gallery-list/gallery-list.component.html
+++ b/src/app/generic/gallery-list/gallery-list.component.html
@@ -130,7 +130,7 @@
                         src="{{config.serverNodeLocation}}images/{{sonLevel}}/{{foldername}}/{{item.imagen}}/{{section}}/none"
                         alt="">
                     <div class="col text-center">
-                        <a [routerLink]="['/share-vpost', item.idPostal]">
+                        <a [routerLink]="['/share-vpost', item.idPostal,sonLevel,foldername,section]">
                             <button type="button" class="btn btn-info" (click)="modal.dismiss('Cross click')">Seleccionar</button>
                         </a>
 
