Cleaning project and add next and preview functionality for modals

--- a/src/app/generic/gallery-list/gallery-list.component.css
+++ b/src/app/generic/gallery-list/gallery-list.component.css
@@ -121,3 +121,13 @@
         right: -10px;
     }
 }
+
+.carousel-control-prev{
+    background-image: none;
+}
+
+
+.carousel-control-next{
+    background-image: none;
+}
+
