--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,3 +22,63 @@ span {
 .main_nav ul li a:hover {
     color: #8fd0a6 !important;
 }
+
+.search {
+    width: auto;
+}
+
+.form {
+    width: fit-content;
+    padding: 10px;
+}
+
+.form a i {
+    font-size: large;
+    color: #ff9600;
+}
+
+.header_search_input {
+    color: black;
+    border-bottom: 1px solid rgb(136, 136, 136)
+}
+
+.header-bar-social ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.flex {
+    display: flex !important;
+}
+
+.align-items-center {
+    -ms-flex-align: center!important;
+    align-items: center!important;
+}
+
+@media only screen and (max-width: 768px) {
+    .large {
+        display: none;
+    }
+    .logo {
+        top: 5px;
+    }
+}
+
+.image-logo-short {
+    max-width: 300px;
+}
+
+.image-logo-large {
+    max-width: 400px;
+}
+
+@media only screen and (max-width: 450px) {
+    .image-logo-large {
+        max-width: 300px;
+    }
+    .image-logo-short {
+        max-width: 200px;
+    }
+}
