--- a/src/assets/css/main_styles.css
+++ b/src/assets/css/main_styles.css
@@ -131,10 +131,6 @@ p a:hover::after {
     opacity: 0.2;
 }
 
-::selection {}
-
-p::selection {}
-
 h1 {
     font-size: 48px;
 }
@@ -166,13 +162,6 @@ h6 {
     -webkit-text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
     text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 }
-
-h1::selection,
-h2::selection,
-h3::selection,
-h4::selection,
-h5::selection,
-h6::selection {}
 
 .form-control {
     color: #db5246;
@@ -300,7 +289,7 @@ section {
     display: none;
 }
 
-.header.scrolled .header_content .logo a {
+.header.scrolled .header_content .logo {
     display: block;
 }
 
@@ -323,14 +312,20 @@ section {
 3.1 Logo
 *********************************/
 
+.logo {
+    display: none;
+    position: absolute;
+    left: 10px;
+    top: -20px;
+}
+
 .logo a {
     display: none;
     font-family: 'BeyondTheMountains';
-    font-size: 30px;
+    font-size: 50px;
     color: rgb(0, 0, 0);
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 0.075em;
+    text-transform: initial;
+    font-weight: 500;
 }
 
 
@@ -437,7 +432,8 @@ a:hover {
     border: none;
     outline: none;
     border-radius: 5px;
-    padding-left: 49px;
+    padding-right: 10px;
+    padding-left: 10px;
     color: #FFFFFF;
 }
 
@@ -445,35 +441,35 @@ a:hover {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(121, 121, 121, 0.5) !important;
 }
 
 .header_search_input:-moz-placeholder {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(121, 121, 121, 0.5) !important;
 }
 
 .header_search_input::-moz-placeholder {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(121, 121, 121, 0.5) !important;
 }
 
 .header_search_input:-ms-input-placeholder {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(121, 121, 121, 0.5) !important;
 }
 
 .header_search_input::input-placeholder {
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px !important;
     font-weight: 400 !important;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(121, 121, 121, 0.5) !important;
 }
 
 .header_search_icon {
@@ -680,8 +676,6 @@ a:hover {
     width: 100%;
     height: 100%;
 }
-
-.home_slider {}
 
 .home_slider_background {
     position: absolute;
@@ -1218,8 +1212,6 @@ a:hover {
     content: '•';
 }
 
-.post_row {}
-
 .grid {
     width: calc(100% + 30px);
 }
@@ -1249,10 +1241,6 @@ a:hover {
 
 .card_small_with_image .post_meta {
     margin-top: 32px;
-}
-
-.card_default:not(:last-child) {
-    /*margin-bottom: 15px;*/
 }
 
 .card_default .card-body {
