--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -1,1 +1,40 @@
-<p>search works!</p>
+<section class="product spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-5">
+                <div class="sidebar">
+                    <div class="sidebar__item">
+                        <h4>Categorias</h4>
+                        <ul>
+                            <li><input type="checkbox" name="" [(ngModel)]="isCollection"><a>Colecciones</a></li>
+                            <li><input type="checkbox" name="" [(ngModel)]="isModel"><a>Muestras</a></li>
+                            <li><input type="checkbox" name="" [(ngModel)]="isStamp"><a>Estampas</a></li>
+                            <li><input type="checkbox" name="" [(ngModel)]="isVPost"><a>V-Post</a></li>
+                            <li><input type="checkbox" name="" [(ngModel)]="isShop"><a>Tienda</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-9 col-md-7">
+                <div class="filter__item">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="filter__found">
+                                <h6><span>16</span> Products found</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+
+                </div>
+                <div class="product__pagination">
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
